--- a/views/gerenciamento.ejs
+++ b/views/gerenciamento.ejs
@@ -9,15 +9,28 @@
     <script src="/javascript/front.js"></script>
     <title>Gerenciamento</title>
 </head>
-<body>
-    <h1 style="color: red; padding-top: 5%; font-weight: bold; margin-bottom: 50px;">Bilhete: <%=codigo%></h1>
-    <br>
-    <br>
-    <h2 style="color:#01A9DB; padding-left: 35%;">Recarga(s)</h2>
-    <%for(let i = 0; i < lista.length; i++) {%>
-        <% if(lista[i][2] == codigo){%>
-            <h3 style="font-size: 1.3em; padding-left: 35%;padding-right: 10%; color:black;">Tipo: <%= lista[i][0]%><br> Data: <%= lista[i][1]%></h3><br><br>
-        <%}%>
-    <%}%>
+<body >
+    <div id="principal">
+        <div style="padding-top: 80px;padding-bottom: 110px; font-weight: bold;"><h1 style="color: #01A9DB;">Relatorio de Gerenciamento</h1></div>
+        <div class="geren_float" >
+            <h1 style="color: black; font-weight: bold; padding-left: 30%; text-align: left; font-size: 1.3em; padding-top: 15px;">Bilhete: <span class="azul"> <%=codigo%></span></h1><br>
+                <h1 style="color: black; font-weight: bold; padding-left: 30%; text-align: left; font-size: 1.3em; padding-top: 15px;">Data de Geração: <span class="azul"> <%= data%> </span> as <span class="azul"> <%= horario%></span></h1> 
+            <div class="clear"></div>
+        </div>
+        <div class="geren_float">
+            <h2 style="color:#01A9DB; padding-left: 30%; font-size: 1.3em;">Recarga(s)</h2>
+            <%for(let i = 0; i < lista.length; i++) {%>
+                <% if(lista[i][2] == codigo){%>
+                    <h3 style="font-size: 1.3em; padding-left: 30%;padding-right: 10%; color:black;">Tipo: <%= lista[i][0]%><br> Data: <%= lista[i][1]%></h3><br><br>
+                <%}%>
+            <%}%>
+            <div class="clear"></div>
+            <div style="margin-top: 260px;">
+                <form action="/voltar_relatorio" method="post">
+                    <input id="btn_voltar_relatorio" type="submit" name="" value="Voltar" onclick="" style="width: 20%; margin-top: 2%; margin-bottom: 2%; height: 40px; ">
+                </form>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
