--- a/views/uso.ejs
+++ b/views/uso.ejs
@@ -25,7 +25,7 @@
         <%if(tipo == 'Bilhete de Trinta Dias'){%>
             <h1 class="msn_uso">Este tipo de bilhete dará ao usuário o direito de utilizar o transporte público quantas vezes quiser durante o período de 30 dias, contados apartir da primeira utilização do bilhete. </h1>
         <%}%>
-        <h1 style="color: black; font-size: 1.3em; margin-top: 2%; font-weight: bold;">Utilização valida até: <span class="vermelho"><%=data%></span> ás <span class="vermelho"><%=horario%></span></h1>
+        <h1 style="color: black; font-size: 1.3em; margin-top: 2%; font-weight: bold;">Utilização válida até: <span class="vermelho"><%=data%></span> às <span class="vermelho"><%=horario%></span></h1>
     </div>
     <div>
     <form action="/erro/uso" method="post">
