--- a/views/recarga_ja_feita.ejs
+++ b/views/recarga_ja_feita.ejs
@@ -10,7 +10,11 @@
 	</head>
 	<body>
 		<div id="principal">
-				<div id="div_top"><h2 style="color: red; padding-top: 20%; margin: 0 auto; text-align: center; font-size: 2.5em;">Já existe uma recarga do tipo <%=tipo%> não expirada no Bilhete <%=codigo%></h2></div>
+			<%if(tipo != null){%>
+				<div id="div_top"><h2 style="color: red; padding-top: 20%; margin: 0 auto; text-align: center; font-size: 2.5em;">Já existe uma recarga do tipo <%=tipo%> não expirada no Bilhete <%=codigo%>!</h2></div>
+			<%}else {%>
+				<div id="div_top"><h2 style="color: red; padding-top: 20%; margin: 0 auto; text-align: center; font-size: 2.5em;">Já existe uma recarga ativa não expirada no Bilhete <%=codigo%>!</h2></div>
+			<%}%>
 				<div class="sla1" class="sla" style="margin-top: 260px;">
                     <form action="/voltar_rec/<%=codigo%>" method="post">
 					    <input id="btn_voltar_erro" type="submit" name="btn_voltar_erro" value="Voltar" onclick="" style="width: 20%; margin-top: 8%;height: 40px;">
